# q-distributed-database-client

./: .gitignore  README.md
.kiro/specs/client-sdk/: AUTOMATION_FIX.md  PROJECT_COMPLETE.md  TASK_10_COMPLETION_NOTES.md  TASK_10_SETUP_COMPLETE.md  TASK_11_COMPLETION_NOTES.md  TASK_11_SETUP_COMPLETE.md  TASK_12_SETUP_COMPLETE.md  TASK_16_COMPLETION_NOTES.md  TASK_17_COMPLETION_NOTES.md  TASK_18_VALIDATION_REPORT.md  TASK_3_COMPLETION_NOTES.md  TASK_4_COMPLETION_NOTES.md  TASK_4_SETUP_COMPLETE.md  TASK_5_COMPLETION_NOTES.md  TASK_5_SETUP_COMPLETE.md  TASK_6_COMPLETION_NOTES.md  TASK_6_SETUP_COMPLETE.md  TASK_7_COMPLETION_NOTES.md  TASK_8_COMPLETION_NOTES.md  TASK_8_SETUP_COMPLETE.md  TASK_9_COMPLETION_NOTES.md  TASK_9_SETUP_COMPLETE.md  design.md  requirements.md  tasks.md
.kiro/specs/client-sdk/FOUNDATION/: README.md  design.md  tasks.md
.kiro/specs/client-sdk/database-client/: requirements.md
docs/: getting-started.md
rust/: Cargo.toml
rust/client-sdk/: Cargo.toml  INTEGRATION_TESTS.md  README.md
rust/client-sdk/examples/: README.md  admin_operations.rs  basic_crud.rs  connection_pooling.rs  transactions.rs
rust/client-sdk/proptest-regressions/: connection.txt  protocol.txt  result.txt
rust/client-sdk/src/: admin_client.rs  auth.rs  client.rs  connection.rs  data_client.rs  error.rs  lib.rs  metrics.rs  protocol.rs  query_builder.rs  result.rs  transaction.rs  types.rs
rust/client-sdk/tests/: client_integration.rs
