[workspace]
members = ["client-sdk"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Q-Distributed-Database Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/quannh0308/q-distributed-database"
homepage = "https://github.com/quannh0308/q-distributed-database"
documentation = "https://docs.rs/q-distributed-db-client"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
